--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ toml = ">=0.10.2"
 python-nmap = "0.6.4"
 pynetbox = "^6.1.3"
 requests = ">=2.26.0"
+lxml = "^4.6.3"
 
 [tool.poetry.dev-dependencies]
 
