--- a/configuration.example.toml
+++ b/configuration.example.toml
@@ -3,11 +3,21 @@ url = "https://netbox.example.com"
 api_token = "k8yj25sc9s4xveqodjdo6awasxh75fk128m7ybac"
 default_devices_site = "Autodiscovered devices"
 
-[discovery]
-nmap_guess_os = true
-nmap_additional_args = "-T4 -n"
-
 [logging]
 file = false
 console = true
 log_level = "info"
+
+[data_sources]
+modules = [
+    "nmap_network_scanner",
+    "avaya_ip_office_phones_enumerator"
+]
+
+[nmap_network_scanner]
+nmap_guess_os = true
+nmap_additional_args = "-T4 -n"
+
+[avaya_ip_office_phones_enumerator]
+pbx_address = "10.0.0.1"
+snmp_community = "public"
