--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-nmap = "0.6.4"
 pynetbox = "^6.1.3"
 requests = ">=2.26.0"
 lxml = "^4.6.3"
+pysnmp = "^4.4.12"
 
 [tool.poetry.dev-dependencies]
 
