--- a/configuration.example.toml
+++ b/configuration.example.toml
@@ -18,6 +18,7 @@ modules = [
 nmap_guess_os = true
 nmap_additional_args = "-T4 -n"
 snmp_communities = ["public", "abcdef12345"]
+snmp_retry_count = 2
 
 [avaya_ip_office_phones_enumerator]
 pbx_address = "10.0.0.1"
