--- a/configuration.example.toml
+++ b/configuration.example.toml
@@ -20,9 +20,11 @@ modules = [
 [nmap_network_scanner]
 nmap_guess_os = true
 nmap_additional_args = "-T4 -n"
+nmap_use_sudo = true
 snmp_recognition_enabled = true
 snmp_communities = ["public", "abcdef12345"]
 snmp_retry_count = 2
+
 # You can filter all prefix by each value, in this example using IPAM prefixes in site abc.
 # if filter isn't present all prefixes will be utilized
 # filters = ['site', 'site1']
